--- a/config.json
+++ b/config.json
@@ -1,6 +1,8 @@
 {
     "title":"九三网络日志",
     "subTitle":"做一个能够成事的人",
+    "homeUrl":"https://lijiaqiong.github.io/blog/",
+    "startSite":"01/05/2024",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last"
 }
