--- a/config.json
+++ b/config.json
@@ -3,6 +3,8 @@
     "subTitle":"做一个能够成事的人",
     "homeUrl":"https://lijiaqiong.github.io/blog/",
     "startSite":"01/05/2024",
+    "UTC":8,
+    "i18n":"CN",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last"
 }
